# duppy

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  setup.py
tests/: test_cli_validation.py  test_find_duplicate_files.py  test_hash_file.py
