[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duppy"
version = "1.0.0"
description = "A CLI tool to find duplicate files using SHA-256"
readme = "README.md"
authors = []
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []

[project.scripts]
duppy = "main:main"

[tool.setuptools]
py-modules = ["main"]
